# Kikitoru

./: .env.dev_example  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  codegen-check.yml  db-docs-cleanup.yml  db-docs.yml
KKT-10/: constraints.html  index.html  info-html.txt
KKT-10/diagrams/tables/: topics.2degrees.dot
KKT-10/tables/: summaries.html
backend/: .dockerignore  .env.example  Dockerfile  main.py  openapi.json  pyproject.toml
backend/app/: dependencies.py  rate_limit.py  worker.py
backend/app/audio/: intake.py
backend/app/auth/: identities.py  user_sessions.py
backend/app/db/: crud.py  engine.py  models.py  summaries.py  summary_edits.py  summary_group.py  transcript_edits.py  transcription_jobs.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1f63cefa89d9_add_transcript_rank_column.py  2780008cab58_add_deleted_at_to_summaries.py  2b103f58012b_add_content_hash_to_summaries.py  428e50631841_add_media_key_to_summaries.py  607cdd2a38bd_replace_google_sub_with_oauth_identities.py  65436f77ed6b_init.py  7a9fcb6fb2c0_add_transcript_segments_table.py  7cab7f45844c_add_user_role_and_status.py  803a7a025926_add_summary_groups_and_group_id.py  8f160e537bc2_add_users_user_sessions_and_summary_.py  9fabcc6b8c80_add_transcription_jobs.py  c2fac8fb1ed2_add_partial_unique_index_for_active_.py  e899724dcc7a_cap_filename_length.py
backend/app/llm/: google_genai.py
backend/app/llm/summarize/: __init__.py  chain.py  prompts.py  schema.py
backend/app/router/: admin.py  audio.py  groups.py  summaries.py
backend/app/router/oauth/: __init__.py  google.py  router.py  session.py
backend/app/router/summaries/: __init__.py  children.py  core.py  router.py  transcript.py
backend/app/schema/: summaries.py  users.py
backend/app/settings/: config.py
backend/app/storage/: __init__.py  s3.py
backend/app/stt/: align.py  diarize.py  models.py  pipeline.py  schema.py  transcribe.py  types.py
backend/scripts/: check_diarize.py  check_transcribe.py  export_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_stt_pipeline.py
backend/tests/integration/db/: conftest.py  test_session_auth.py  test_summaries_owner_scope.py  test_summary_constraints.py  test_upsert_identity.py
backend/tests/integration/stt/: conftest.py  test_stt_pipeline.py
backend/tests/llm/summarize/: test_chain.py
backend/tests/router/: test_audio.py
backend/tests/stt/: test_align.py  test_diarize.py  test_transcribe.py
backend/tests/unit/: conftest.py  test_dependencies.py
backend/tests/unit/auth/: test_identities.py  test_user_sessions.py
backend/tests/unit/db/: test_engine.py
backend/tests/unit/llm/summarize/: test_chain.py  test_schema.py
backend/tests/unit/router/: conftest.py  test_admin.py  test_audio.py  test_groups.py  test_rate_limit.py  test_session.py  test_summaries.py  test_transcript.py
backend/tests/unit/settings/: test_config.py
backend/tests/unit/stt/: test_align.py  test_diarize.py  test_models.py  test_pipeline.py  test_transcribe.py
develop/: columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  kikitoru.public.xml  relationships.html
develop/diagrams/summary/: relationships.real.compact.dot  relationships.real.large.dot
develop/diagrams/tables/: action_items.1degree.dot  action_items.2degrees.dot  decisions.1degree.dot  decisions.2degrees.dot  oauth_identities.1degree.dot  oauth_identities.2degrees.dot  summaries.1degree.dot  summaries.2degrees.dot  summary_groups.1degree.dot  summary_groups.2degrees.dot  topics.1degree.dot  topics.2degrees.dot  transcript_segments.1degree.dot  transcript_segments.2degrees.dot  transcription_jobs.1degree.dot  user_sessions.1degree.dot  user_sessions.2degrees.dot  users.1degree.dot  users.2degrees.dot
develop/tables/: summaries.html  summary_groups.html  transcript_segments.html  user_sessions.html  users.html
docs/: PLAN.md  aws-setup.md  db-diagram.md
feat-KKT-31/: index.html  info-html.txt
feat-KKT-31/diagrams/tables/: summaries.1degree.dot  topics.2degrees.dot  user_sessions.1degree.dot
feat-KKT-31/tables/: summaries.html
feat-KKT-33/: index.html  info-html.txt  kikitoru.public.xml  orphans.html
feat-KKT-33/diagrams/summary/: relationships.real.compact.dot
feat-KKT-33/diagrams/tables/: users.1degree.dot  users.2degrees.dot
feat-KKT-42/: columns.html  index.html  info-html.txt  kikitoru.public.xml
feat-KKT-42/diagrams/summary/: relationships.real.large.dot
feat-KKT-42/diagrams/tables/: alembic_version.1degree.dot  decisions.1degree.dot  summaries.2degrees.dot  (+1 more)
feat-KKT-42/tables/: summaries.html
feat-KKT-43/: deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  kikitoru.public.xml
feat-KKT-47/: columns.html  index.html  info-html.txt
feat-KKT-47/tables/: summaries.html  users.html
feat-KKT-50/: index.html  info-html.txt
feat-KKT-50/tables/: summaries.html  users.html
feature-KKT-12/: index.html  info-html.txt
feature-KKT-6/: anomalies.html  index.html  info-html.txt
feature-KKT-9/: columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  kikitoru.public.xml
feature-KKT-9/tables/: oauth_identities.html  users.html
fix-KKT-21/: columns.html  index.html  info-html.txt  insertionOrder.txt  kikitoru.public.xml
frontend/: index.html  kubb.config.ts  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  index.css
improve-KKT-14/: index.html  info-html.txt
improve-KKT-15/: index.html  info-html.txt
improve-KKT-15/tables/: alembic_version.html  topics.html
improve-KKT-21/: index.html  info-html.txt
improve-KKT-21/tables/: action_items.html  decisions.html
improve-KKT-37/: columns.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  kikitoru.public.xml  routines.html
improve-KKT-37/tables/: transcript_segments.html  transcription_jobs.html  users.html
typings/: fractional_indexing.pyi
(+70 files in other folders)
